--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@repo/ui": "*",
+    "@types/uuid": "^10.0.0",
+    "next": "15.0.0-rc.0",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
-    "next": "15.0.0-rc.0"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
