--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@repo/types": "*",
     "@repo/ui": "*",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/uuid": "^10.0.0",
+    "autoprefixer": "^10.4.20",
     "next": "15.0.0-rc.0",
+    "postcss": "^8.4.41",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "tailwindcss": "^3.4.10",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
