--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -23,6 +23,10 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "react": "^18.2.0"
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
+    "react": "^18.2.0",
+    "tailwindcss": "^3.4.10"
   }
 }
