--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -26,7 +26,8 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
-    "react": "^18.2.0",
+    "react": "19.0.0-rc-f994737d14-20240522",
+    "react-dom": "19.0.0-rc-f994737d14-20240522",
     "tailwindcss": "^3.4.10"
   }
 }
