--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -4,10 +4,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "bun script/build.ts"
+    "build": "bun script/build.ts",
+    "release": "bun script/release.ts"
   },
   "dependencies": {
     "@repo/ui": "*",
+    "@types/archiver": "^6.0.2",
     "chrome-types": "^0.1.297",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522"
@@ -15,11 +17,12 @@
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
-    "typescript": "^5",
-    "@types/node": "^20",
-    "eslint": "^8",
     "@types/bun": "^1.1.6",
+    "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "@types/react-dom": "^18",
+    "archiver": "^7.0.1",
+    "eslint": "^8",
+    "typescript": "^5"
   }
 }
