--- a/apps/extension/tsconfig.json
+++ b/apps/extension/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "@repo/typescript-config/react-library.json",
   "compilerOptions": {
-    "moduleResolution": "Bundler",
+    "moduleResolution": "NodeNext",
     "types": [
       "chrome-types",
       "bun"
