--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@repo/types": "*",
+    "@repo/i18n": "*",
     "@repo/ui": "*",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/uuid": "^10.0.0",
